Corrigindo Swagger
