# storage/api-docs/api-docs.json
@@ -19,7 +19,8 @@
                         "description": "User's email",
                         "required": true,
                         "schema": {
-                            "type": "string"
+                            "type": "string",
+                            "format": "email"
                         }
                     },
                     {
@@ -28,16 +29,33 @@
                         "description": "User's password",
                         "required": true,
                         "schema": {
-                            "type": "string"
+                            "type": "string",
+                            "format": "password"
                         }
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "Login successful"
+                        "description": "Login successful",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "token": {
+                                            "type": "string",
+                                            "example": "jwt.token.here"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
                     },
                     "401": {
                         "description": "Invalid credentials"
+                    },
+                    "500": {
+                        "description": "Could not create token"
                     }
                 }
             }
@@ -51,7 +69,23 @@
                 "operationId": "fe8f3429cd6979b3b4517e186505f9f9",
                 "responses": {
                     "200": {
-                        "description": "Success"
+                        "description": "Logout bem-sucedido",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Logout bem-sucedido"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Erro ao realizar logout"
                     }
                 },
                 "security": [
@@ -70,7 +104,35 @@
                 "operationId": "5bb6b93f7ae5550d967fa85d00820aa5",
                 "responses": {
                     "200": {
-                        "description": "Success"
+                        "description": "Lista de comércios",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "properties": {
+                                            "id": {
+                                                "type": "integer",
+                                                "example": 1
+                                            },
+                                            "nome": {
+                                                "type": "string",
+                                                "example": "Nome do Comércio"
+                                            },
+                                            "endereco": {
+                                                "type": "string",
+                                                "example": "Endereço do Comércio"
+                                            },
+                                            "telefone": {
+                                                "type": "string",
+                                                "example": "123456789"
+                                            }
+                                        },
+                                        "type": "object"
+                                    }
+                                }
+                            }
+                        }
                     }
                 },
                 "security": [
@@ -85,7 +147,7 @@
                 "tags": [
                     "Comercio"
                 ],
-                "summary": "Get a Comercio by ID",
+                "summary": "Get Comercio by ID",
                 "operationId": "cd42b396f2512c7cc59a5b94810ad148",
                 "parameters": [
                     {
@@ -99,7 +161,32 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Success"
+                        "description": "Detalhes do comércio",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "id": {
+                                            "type": "integer",
+                                            "example": 1
+                                        },
+                                        "nome": {
+                                            "type": "string",
+                                            "example": "Nome do Comércio"
+                                        },
+                                        "endereco": {
+                                            "type": "string",
+                                            "example": "Endereço do Comércio"
+                                        },
+                                        "telefone": {
+                                            "type": "string",
+                                            "example": "123456789"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
                     },
                     "404": {
                         "description": "Comércio não encontrado"
@@ -135,7 +222,8 @@
                         "description": "User's email",
                         "required": true,
                         "schema": {
-                            "type": "string"
+                            "type": "string",
+                            "format": "email"
                         }
                     },
                     {
@@ -144,13 +232,52 @@
                         "description": "User's password",
                         "required": true,
                         "schema": {
-                            "type": "string"
+                            "type": "string",
+                            "format": "password"
                         }
                     }
                 ],
                 "responses": {
                     "201": {
-                        "description": "User registered successfully"
+                        "description": "User registered successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "type": "boolean",
+                                            "example": true
+                                        },
+                                        "user": {
+                                            "properties": {
+                                                "id": {
+                                                    "type": "integer",
+                                                    "example": 1
+                                                },
+                                                "name": {
+                                                    "type": "string",
+                                                    "example": "Nome do Usuário"
+                                                },
+                                                "email": {
+                                                    "type": "string",
+                                                    "example": "usuario@exemplo.com"
+                                                }
+                                            },
+                                            "type": "object"
+                                        },
+                                        "token": {
+                                            "type": "string",
+                                            "example": "jwt.token.here"
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Usuario cadastrado com sucesso"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
                     },
                     "400": {
                         "description": "Processing errors"
